[gd_scene load_steps=2 format=3 uid="uid://b5qx8n7m3j8hy"]

[ext_resource type="Script" path="res://scripts/MazeScene.gd" id="1_1x2q4"]

[node name="MazeScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_1x2q4")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.3, 0.5, 1)

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopPanel" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0

[node name="CoinLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "üí∞ ÈáëÂ∏Å: 0"
vertical_alignment = 1

[node name="GameTimerLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "üï∞Ô∏è Ê∏∏ÊàèÊó∂Èó¥: 10:00"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MazeArea" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0

[node name="PlayerSprite" type="Label" parent="UI/MazeArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = 20.0
offset_right = 40.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 48
text = "üßô‚Äç‚ôÇÔ∏è"
horizontal_alignment = 1

[node name="PathContainer" type="HBoxContainer" parent="UI/MazeArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = -20.0
alignment = 1

[node name="Path1" type="Label" parent="UI/MazeArea/PathContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "üõ§Ô∏è"
horizontal_alignment = 1

[node name="Path2" type="Label" parent="UI/MazeArea/PathContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "üõ§Ô∏è"
horizontal_alignment = 1

[node name="Path3" type="Label" parent="UI/MazeArea/PathContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "üõ§Ô∏è"
horizontal_alignment = 1

[node name="QuestionArea" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -180.0
offset_right = 300.0
offset_bottom = -20.0

[node name="QuestionLabel" type="Label" parent="UI/QuestionArea"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "25 + 17 = ?"
horizontal_alignment = 1

[node name="TimerContainer" type="HBoxContainer" parent="UI/QuestionArea"]
layout_mode = 2
alignment = 1

[node name="TimerBar" type="ProgressBar" parent="UI/QuestionArea/TimerContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 8.0
value = 8.0
show_percentage = false

[node name="TimerLabel" type="Label" parent="UI/QuestionArea/TimerContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "8"
horizontal_alignment = 1

[node name="AnswerContainer" type="HBoxContainer" parent="UI/QuestionArea"]
layout_mode = 2
alignment = 1

[node name="AnswerBtn1" type="Button" parent="UI/QuestionArea/AnswerContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "42"

[node name="AnswerBtn2" type="Button" parent="UI/QuestionArea/AnswerContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "41"

[node name="AnswerBtn3" type="Button" parent="UI/QuestionArea/AnswerContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "43"

[node name="FeedbackPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -180.0
offset_right = 250.0
offset_bottom = -120.0
modulate = Color(1, 1, 1, 0.95)
visible = false

[node name="FeedbackLabel" type="Label" parent="UI/FeedbackPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelCompletePopup" type="Panel" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/LevelCompletePopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
alignment = 1

[node name="TitleLabel" type="Label" parent="UI/LevelCompletePopup/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "üéâ ÊÅ≠ÂñúÈÄöÂÖ≥ÔºÅ"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="UI/LevelCompletePopup/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Ëµ∞Âá∫‰∫ÜÂä†ÂáèÊ≥ïËø∑ÂÆ´ÔºÅ
Ëé∑ÂæóÈáëÂ∏Å: +15
Âú∞ÂõæÁ¢éÁâá: +1"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="UI/LevelCompletePopup/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ËøîÂõû‰∏ªËèúÂçï"

[node name="Audio" type="Node" parent="."]

[node name="CorrectSound" type="AudioStreamPlayer" parent="Audio"]

[node name="WrongSound" type="AudioStreamPlayer" parent="Audio"]

[node name="TimeoutSound" type="AudioStreamPlayer" parent="Audio"]